--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
     <link rel="stylesheet" href="./node_modules/angular-loading-bar/src/loading-bar.css">
+    <link rel="stylesheet" href="./assets/css/animate.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body ng-controller="mainCtrl" ng-cloak>
-    <aside-menu id="sol2" side="left" width="280px" is-backdrop="true" push-content="true">
+    <aside-menu id="sol2" side="left" width="280px" is-backdrop="true" push-content="true" ng-cloak>
         <ul class="list-group">
             <li class="list-group-item menu-user-info">
                 <div class="text-center menu-user-image">
@@ -30,13 +31,10 @@
                 <div class="child-list-group-item" uib-collapse="isCollapsed_$index" ng-repeat="cmenu in menu.child">
                     <a  href="{{ cmenu.url }}">{{ cmenu.name }}</a>
                 </div>
-            </li>
-
-           
-            
+            </li>   
         </ul>
     </aside-menu>
-    <aside-menu-content>
+    <aside-menu-content ng-cloak>
         <ng-include src="'./view/_parts/nav.html'"></ng-include>
         <div class="container-fluid">
             <ng-view></ng-view>
@@ -47,6 +45,7 @@
     <script src="./node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="./node_modules/angular-aria/angular-aria.min.js"></script>
     <script src="./node_modules/angular-route/angular-route.min.js"></script>
+    <script src="./node_modules/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="./assets/js/ocLazyLoad.js"></script>
     <script src="./node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
     <script src="./node_modules/angular-loading-bar/src/loading-bar.js"></script>
@@ -56,6 +55,7 @@
     <script src="./src/service/mainService.js"></script>
     <script src="./src/service/authService.js"></script>
     <script src="./src/service/historyService.js"></script>
+    <script src="./src/service/categoryService.js"></script>
     <script src="./src/router.js"></script>
     <script src="./src/controller/mainCtrl.js"></script>
     <script src="./assets/js/main.js"></script>
